--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/main.js",
-    "build" : "tsc -p",
+    "build": "tsc -p",
     "dev": " tsc-watch --onSuccess \"node dist/index.js\""
   },
   "keywords": [],
@@ -12,10 +12,15 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.10.2",
+    "prisma": "^6.0.1",
     "tsc-watch": "^6.2.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
+    "dotenv": "^16.4.7",
     "ioredis": "^5.4.1",
     "socket.io": "^4.8.1"
   }
