--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
+    "@prisma/client": "^6.0.1",
     "dotenv": "^16.4.7",
     "ioredis": "^5.4.1",
     "socket.io": "^4.8.1"
