--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/main.js",
-    "build": "tsc",
+    "build": "npm install && tsc",
     "dev": "tsc-watch --onSuccess \"node dist/index.js\""
   },
   "keywords": [],
@@ -12,7 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.15.14",
     "prisma": "^6.0.1",
     "tsc-watch": "^6.2.1",
     "tsx": "^4.19.2",
