--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/main.js",
+    "start": "node dist/index.js",
     "build": "npm install && tsc",
     "dev": "tsc-watch --onSuccess \"node dist/index.js\""
   },
