--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "npm install && tsc",
+    "build": "npm install && prisma generate && tsc",
     "dev": "tsc-watch --onSuccess \"node dist/index.js\""
   },
   "keywords": [],
